bugfix(app) The product list on the collection modal does not need to have overflow on the horizontal

--- a/client/assets/stylesheets/_modal.sass
+++ b/client/assets/stylesheets/_modal.sass
@@ -14,7 +14,7 @@
       overflow: visible
       .results
         max-height: 190px
-        overflow: scroll
+        overflow-y: scroll
         margin-bottom: 15px
       .buttons
         display: flex
